syntax = "proto3";

package product;

import "common/base_response.proto";
import "common/pagination.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/fahrillrizal/ecommerce-grpc/pb/product";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc DetailProduct (DetailProductRequest) returns (DetailProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProduct (ListProductRequest) returns (ListProductResponse);
    rpc ListProductAdmin (ListProductAdminRequest) returns (ListProductAdminResponse);
    rpc HighlightProducts (HighlightProductsRequest) returns (HighlightProductsResponse);
}

message CreateProductRequest {
    string name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
    string description = 2 [(buf.validate.field).string = {min_len: 1, max_len: 1000}];
    double price = 3 [(buf.validate.field).double.gte = 0];
    string image_url = 4;
    bytes image_data = 5;
    string image_filename = 6;
}

message CreateProductResponse {
    common.BaseResponse base = 1;
    string id = 2;
}

message DetailProductRequest {
    uint64 id = 1;
}

message DetailProductResponse {
    common.BaseResponse base = 1;
    uint64 id = 2;
    string name = 3;
    string description = 4;
    double price = 5;
    string image_url = 6;
}

message UpdateProductRequest {
    uint64 id = 1 [(buf.validate.field).uint64.gt = 0];
    string name = 2 [(buf.validate.field).string.max_len = 255]; 
    string description = 3 [(buf.validate.field).string.max_len = 1000]; 
    double price = 4;
    string image_url = 5;
    bytes image_data = 6;
    string image_filename = 7;
}

message UpdateProductResponse {
    common.BaseResponse base = 1;
    uint64 id = 2;
}

message DeleteProductRequest {
    uint64 id = 1;
}

message DeleteProductResponse {
    common.BaseResponse base = 1;
}

message ListProductRequest {
    common.PaginationRequest pagination = 1;
}

message ListProductResponseItem{
    uint64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message ListProductResponse {
    common.BaseResponse base = 1;
    common.PaginationResponse pagination = 2;
    repeated ListProductResponseItem data = 3;
}

message ListProductAdminRequest {
    common.PaginationRequest pagination = 1;
}

message ListProductAdminResponseItem{
    uint64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message ListProductAdminResponse {
    common.BaseResponse base = 1;
    common.PaginationResponse pagination = 2;
    repeated ListProductAdminResponseItem data = 3;
}

message HighlightProductsRequest {}

message HighlightProductsResponseItem{
    uint64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message HighlightProductsResponse {
    common.BaseResponse base = 1;
    repeated HighlightProductsResponseItem data = 2;
}